[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{name = "Ketsia LENTIN", email = "saraswati@3p0.net"}]
dependencies = ["httpx","pillow","dnspython","cerberus"]
description = "Outils Python pour projets robustes : validation, journalisation, mailing, image, etc."
dynamic = ["version"]
license = {text = "MIT"}
maintainers = [{name = "Couleur West IT", email = "contact@couleurwest-it.com"}]
name = "dreamtools"
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.12"

[project.scripts]
dreamtools-init = "dreamtools.cli:main"

classifiers = [
  "Development Status :: 4 - Beta",
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://couleurwest-it.com"
Repository = "https://github.com/couleurwest/dreamtools"
