[build-system]
requires = ["flit_core >=3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
name = "dreamtools"
authors = [{name = "Ketsia LENTIN", email = "saraswati@3p0.net"}]
maintainers = [{name = "Couleur West IT", email = "contact@couleurwest-it.com"}]
description = "Outils Python pour projets robustes : validation, journalisation, mailing, image, etc."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = ["httpx", "pillow", "dnspython", "cerberus"]
dynamic = ["version"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12"
]

[project.scripts]
dreamtools-init = "dreamtools.cli:main"

[project.urls]
Homepage = "https://couleurwest-it.com"
Repository = "https://github.com/couleurwest/dreamtools"
